# excercises-cpp

./: prime-factors.cpp
perlin-noise/: BUILDING.md  CMakeLists.txt
perlin-noise/src/: main.cpp
